--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+
+:root {
+  --rule-width: 0;
+}
+
 body {
   overflow: hidden;
   margin: 0;
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(5, 5, 10);
+}
+
+#simple-loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-family: cursive;
 }
 
 #potrait-screen {
+  display: none;
   user-select: none;
   overflow: hidden;
   position: absolute;
@@ -16,38 +34,7 @@ body {
   bottom: 0;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: black;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-}
-
-.loading {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  top: 0;
-  bottom: 0;
-  margin-bottom: auto;
-  margin-top: auto;
-  width: 50%;
-}
-
-.loadingText {
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-  font-size: 12px;
-  text-align: center;
-  top: 0;
-  bottom: 0;
-  margin-top: auto;
-  margin-bottom: auto;
-  height: 52px;
+  background-color: rgb(100, 30, 30);
 }
 
 .page {
@@ -55,7 +42,11 @@ body {
   height: 100%;
 }
 
-#page2, #page3 {
+#page2 {
+  background-image: linear-gradient(rgb(83, 23, 23), rgb(143, 77, 77),  rgb(46, 7, 7));
+}
+
+#page3 {
   display: none;
 }
 
@@ -77,18 +68,22 @@ body {
   margin-top: 0;
   text-align: center;
   color: white;
-  font-family: monospace, sans-serif;
+  font-family: 'Architects Daughter', cursive;
+  transform: translateY(-300px);
 }
 
 #rule {
-  width: 70%;
+  opacity: 0;
+  width: 60%;
   margin: 0 auto;
   padding: 10px;
-  color: white;
-  border: 1px solid white;
-  border-radius: 10px;
+  color: rgb(255, 236, 236);
+  background-color: rgba(51, 6, 6, 0.5);
+  box-shadow: 1px 1px 2px black;
+  border-radius: 5px;
   list-style-type: none;
-  font-family: monospace, serif;
+  font-family: 'Recursive', sans-serif;
+  font-size: 12px;
 }
 
 #play-button {
@@ -96,29 +91,27 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0, 0);
   color: white;
   font-size: 50px;
   font-weight: bold;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Architects Daughter', cursive;
 }
 
 .center-area {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-}
-
-#play-button:hover {
-  font-size: 60px;
-  height: 70px;
+  left: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
 }
 
 #ground {
   position: relative;
   width: 100%;
   height: 50%;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgb(36, 2, 2);
+  background-image: linear-gradient(rgb(63, 13, 13), rgb(141, 60, 60), rgb(172, 105, 105));
 }
 
 #player {
@@ -127,19 +120,55 @@ body {
   width: 20px;
   height: 20px;
   bottom: 0;
+  z-index: 1;
+  border-radius: 3px;
+}
+
+#player .eye {
+  overflow: hidden;
+  position: absolute;
+  border: 1px solid rgb(36, 36, 36);
+  background-color: white;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  right: 0;
+  transform: translateX(25%);
+}
+
+#player .eyeball {
+  position: absolute;
+  background-color: black;
+  border-radius: 50%;
+  width: 5px;
+  height: 5px;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#player .mouth {
+  position: absolute;
+  border: 1px solid rgb(95, 20, 20);
+  width: 5px;
+  right: 0;
+  top: 75%;
+  transform: translateY(-50%);
 }
 
 .block {
-  border: 1px solid white;
+  border: 1px solid rgb(255, 211, 211);
+  border-bottom: 1px solid rgb(56, 33, 33);
   width: 15px;
   height: 15px;
   position: absolute;
   bottom: 0;
   left: 100%;
+  background-color: rgb(56, 33, 33);
 }
 
 #row1, #row2 {
-  border: 1px solid white;
+  border: 1px solid rgb(255, 211, 211);
   height: 25%;
   display: flex;
 }
@@ -147,12 +176,18 @@ body {
 .box1, .box2, .box3, .box4 {
   position: relative;
   color: white;
-  border: 1px solid white;
+  border: 1px solid rgb(255, 211, 211);
+  background-color: rgb(145, 59, 59);
+  background-image: radial-gradient(rgb(172, 84, 84), rgb(156, 74, 74), rgb(136, 50, 50));
   width: 50%;
   height: 100%;
   flex-grow: 1;
   text-align: center;
   font-family: monospace, sans-serif;
+}
+
+.box1:active, .box2:active, .box3:active, .box4:active {
+  background-image: radial-gradient(rgb(201, 113, 113), rgb(185, 102, 102), rgb(165, 77, 77));
 }
 
 .first, .second, .third, .fourth {
@@ -170,23 +205,27 @@ body {
   position: absolute;
   color: white;
   left: 10px;
-  font-family: monospace, serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
 }
 
 .score-box {
   padding: 10px;
   color: white;
   display: none;
-  font-family: monospace, sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
 }
 
 #lose-notice {
+  position: relative;
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
   display: none;
   color: white;
-  font-family: monospace, serif;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
 }
 
 .best-score-box {
@@ -194,16 +233,442 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: rgb(190, 190, 190);
-  font-family: monospace, sans-serif;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: 'Roboto Mono', monospace;
+  font-size: 14px;
   display: none;
 }
 
 #back {
+  position: relative;
   text-align: center;
   color: white;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
-  font-family: monospace, sans-serif;
+  font-family: 'Roboto Mono', monospace;
   display: none;
+}
+
+.hotels {
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+}
+
+.hotel {
+  position: absolute;
+  width: 10%;
+  bottom: 0;
+  background-color: rgb(26, 2, 2);
+  border: 1px solid rgb(26, 2, 2);
+}
+
+#hotel1 {
+  height: 100%;
+}
+
+#hotel2 {
+  height: 70%;
+  left: 10%;
+}
+
+#hotel3 {
+  height: 90%;
+  left: 20%;
+}
+
+#hotel4 {
+  height: 50%;
+  left: 30%;
+}
+
+#hotel5 {
+  height: 95%;
+  left: 40%;
+}
+
+#hotel6 {
+  height: 70%;
+  left: 50%;
+}
+
+#hotel7 {
+  height: 50%;
+  left: 60%;
+}
+
+#hotel8 {
+  height: 80%;
+  left: 70%;
+}
+
+#hotel9 {
+  height: 65%;
+  left: 80%;
+}
+
+#hotel10 {
+  height: 35%;
+  left: 90%;
+}
+
+#hotel11 {
+  height: 100%;
+  left: 100%;
+}
+
+#hotel12 {
+  height: 70%;
+  left: 110%;
+}
+
+#hotel13 {
+  height: 90%;
+  left: 120%;
+}
+
+#hotel14 {
+  height: 50%;
+  left: 130%;
+}
+
+#hotel15 {
+  height: 95%;
+  left: 140%;
+}
+
+#hotel16 {
+  height: 70%;
+  left: 150%;
+}
+
+#hotel17 {
+  height: 50%;
+  left: 160%;
+}
+
+#hotel18 {
+  height: 80%;
+  left: 170%;
+}
+
+#hotel19 {
+  height: 65%;
+  left: 180%;
+}
+
+#hotel20 {
+  height: 35%;
+  left: 190%;
+}
+
+.speaker-area {
+  position: absolute;
+  height: 15%;
+  width: 100%;
+}
+
+#speaker {
+  position: absolute;
+  width: calc(8 / 5 * 100% * 15 / 100 * 65 / 100);
+  height: calc(100% * 65 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0, 0);
+  z-index: 1;
+}
+
+#speaker .back-piece {
+  position: absolute;
+  background-color: white;
+  width: 15%;
+  height: 40%;
+  border-radius: 5px;
+  top: 50%;
+  left: 5%;
+  transform: translateY(-50%);
+}
+
+#speaker .volume-piece {
+  position: absolute;
+  background-color: white;
+  width: 40%;
+  height: 85%;
+  top: 50%;
+  transform: translateY(-50%);
+  border-top-left-radius: 200%;
+  border-bottom-left-radius: 200%;
+  left: 25%;
+}
+
+#speaker #line1 {
+  position: absolute;
+  background-color: white;
+  width: 6%;
+  height: 15%;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 70%;
+}
+
+#speaker #line2 {
+  position: absolute;
+  background-color: white;
+  width: 6%;
+  height: 25%;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 78%;
+}
+
+#speaker #line3 {
+  position: absolute;
+  background-color: white;
+  width: 6%;
+  height: 40%;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 86%;
+}
+
+#speaker .line-muter {
+  position: absolute;
+  border: 1px solid rgb(161, 136, 136);
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) rotate(-45deg);
+}
+
+#accessorise-area {
+  position: absolute;
+  top: 66%;
+  transform: translateY(-50%);
+  width: 100%;
+  height: 22%;
+}
+
+#player-accessorise {
+  position: absolute;
+  z-index: 3;
+  background-color: white;
+  width: calc(8 / 5 * 100% * 22 / 100 * 60 / 100);
+  height: calc(100% * 60 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0, 0);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player2-accessorise {
+  filter: brightness(60%);
+  display: none;
+  position: absolute;
+  z-index: 2;
+  background-color: rgb(255, 255, 0);
+  width: calc(8 / 5 * 100% * 22 / 100 * 40 / 100);
+  height: calc(100% * 40 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(50%, -50%) translateX(-100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player3-accessorise {
+  filter: brightness(60%);
+  display: none;
+  position: absolute;
+  z-index: 2;
+  background-color: rgb(0, 255, 0);
+  width: calc(8 / 5 * 100% * 22 / 100 * 40 / 100);
+  height: calc(100% * 40 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(-150%, -50%) translateX(100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player4-accessorise {
+  filter: brightness(45%);
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: rgb(0, 255, 255);
+  width: calc(8 / 5 * 100% * 22 / 100 * 30 / 100);
+  height: calc(100% * 30 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(-280%, -50%) translateX(100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player5-accessorise {
+  filter: brightness(45%);
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: rgb(255, 0, 255);
+  width: calc(8 / 5 * 100% * 22 / 100 * 30 / 100);
+  height: calc(100% * 30 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(180%, -50%) translateX(-100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player6-accessorise {
+  filter: brightness(30%);
+  display: none;
+  position: absolute;
+  background-color: rgb(0, 0, 255);
+  width: calc(8 / 5 * 100% * 22 / 100 * 25 / 100);
+  height: calc(100% * 25 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(-410%, -50%) translateX(100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+#player7-accessorise {
+  filter: brightness(30%);
+  display: none;
+  position: absolute;
+  background-color: rgb(255, 0, 0);
+  width: calc(8 / 5 * 100% * 22 / 100 * 25 / 100);
+  height: calc(100% * 25 / 100);
+  top: 50%;
+  left: 50%;
+  transform: translate(310%, -50%) translateX(-100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 3px 1px rgb(48, 48, 48);
+}
+
+.eyes-accessorise {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+}
+
+.eye-accessorise-1, .eye-accessorise-2 {
+  position: relative;
+  border: 2px solid black;
+  width: calc(50% - 4px);
+  height: 100%;
+  border-radius: 50%;
+  float: left;
+  background-color: white;
+}
+
+#eyeball-accessorise-1, #eyeball-accessorise-2, #eyeball2-accessorise-1, #eyeball2-accessorise-2, #eyeball3-accessorise-1, #eyeball3-accessorise-2, #eyeball4-accessorise-1, #eyeball4-accessorise-2, #eyeball5-accessorise-1, #eyeball5-accessorise-2, #eyeball6-accessorise-1, #eyeball6-accessorise-2, #eyeball7-accessorise-1, #eyeball7-accessorise-2 {
+  position: absolute;
+  background-color: black;
+  width: 35%;
+  height: 35%;
+  border-radius: 50%;
+  top: 50%;
+}
+
+#eyeball-accessorise-1, #eyeball2-accessorise-1, #eyeball3-accessorise-1, #eyeball4-accessorise-1, #eyeball5-accessorise-1, #eyeball6-accessorise-1, #eyeball7-accessorise-1 {
+  left: 59%;
+  transform: translate(-50%, -50%);
+}
+
+#eyeball-accessorise-2, #eyeball2-accessorise-2, #eyeball3-accessorise-2, #eyeball4-accessorise-2, #eyeball5-accessorise-2, #eyeball6-accessorise-2, #eyeball7-accessorise-2 {
+  right: 59%;
+  transform: translate(50%, -50%);
+}
+
+#mouth-accessorise, #mouth2-accessorise, #mouth3-accessorise, #mouth4-accessorise, #mouth5-accessorise, #mouth6-accessorise, #mouth7-accessorise {
+  border: 2px solid rgb(95, 20, 20);
+  position: absolute;
+  width: 50%;
+  left: 50%;
+  top: 75%;
+  transform: translate(-50%, -50%);
+}
+
+.my-info {
+  color: rgb(34, 34, 34);
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 1px 1px 1px rgb(90, 90, 90);
+  border-radius: 50%;
+  position: absolute;
+  z-index: 6;
+  width: 20px;
+  height: 20px;
+  top: 8px;
+  left: 8px;
+  transform: scale(0, 0);
+}
+
+.italic-i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-55%, -50%);
+}
+
+.info-popup {
+  display: none;
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 5px;
+  z-index: 4;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: calc(5 / 8 * 100% * 80 / 100 * 70 / 100);
+  border-radius: 5px;
+}
+
+.close {
+  position: absolute;
+  border: 1px solid white;
+  background-color: rgba(212, 0, 0, 0.9);
+  color: white;
+  border-radius: 10px;
+  padding: 1px 6px;
+  font-family: sans-serif;
+  right: 0;
+  text-align: center;
+  transform: translate(50%, -70%);
+}
+
+.close:active {
+  background-color: rgba(100, 0, 0, 0.9);
+}
+
+.the-information {
+  color: rgb(48, 48, 48);
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family: 'Roboto Mono', monospace;
+}
+
+.property {
+  font-weight: bold;
+}
+
+.value {
+  padding-bottom: 5px;
+}
+
+.info-heading {
+  font-weight: bold;
+  transform: translateY(-40%);
+}
+
+#player-accessorise, #player2-accessorise, #player3-accessorise, #player4-accessorise, #player5-accessorise, #player6-accessorise, #player7-accessorise {
+  border-radius: 10px;
 }
