--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,27 @@
   --rule-width: 0;
 }
 
+.wanted5games-logo {
+  position: absolute;
+  display: block;
+  z-index: 10;
+  right: 5px;
+  top: 5px;
+}
+
+.more-games {
+  position: absolute;
+  z-index: 10;
+  bottom: 8px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: rgba(255, 255, 255, 0.6);
+  font-family: sans-serif;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 4px;
+  padding: 2px 4px;
+}
+
 body {
   overflow: hidden;
   margin: 0;
@@ -596,17 +617,17 @@ body {
 }
 
 .my-info {
-  color: rgb(34, 34, 34);
-  background-color: rgba(255, 255, 255, 0.9);
-  box-shadow: 1px 1px 1px rgb(90, 90, 90);
-  border-radius: 50%;
+  color: rgba(255, 255, 255, 0.7);
+  border-radius: 10px;
   position: absolute;
   z-index: 6;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
+  padding: 1px;
   top: 8px;
   left: 8px;
   transform: scale(0, 0);
+  border: 1px solid rgba(255, 255, 255, 0.7);
 }
 
 .italic-i {
